--- a/hospitalv2/index.html
+++ b/hospitalv2/index.html
@@ -1,51 +1,115 @@
-
-<!doctype html><html lang="en" data-theme="light">
+<!doctype html>
+<html lang="en" data-theme="light">
 <head>
-<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Clinic PWA – CSV Demo</title>
-<link rel="icon" href="assets/logo.png"/>
-<link rel="stylesheet" href="styles.css"/>
-<script src="js/csv.js"></script>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Dr. Charan Hospital — CSV Demo Hub</title>
+  <link rel="icon" href="assets/logo.png"/>
+  <link rel="stylesheet" href="styles.css"/>
+  <style>
+    .wrap{max-width:1120px;margin:0 auto}
+    .toolbar{display:flex;gap:10px;flex-wrap:wrap;margin:10px 12px}
+    .chip{padding:10px 14px;border-radius:999px;background:var(--card-bg);border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
+    .section{background:var(--card-bg);margin:12px;padding:18px;border-radius:var(--radius);box-shadow:var(--shadow)}
+    .grid{display:grid;gap:16px;grid-template-columns:repeat(auto-fit,minmax(240px,1fr))}
+    .tile{display:block;text-decoration:none;color:inherit;padding:20px;border-radius:18px;box-shadow:var(--shadow);border:1px solid rgba(0,0,0,.06)}
+    .tile h3{font-size:20px;margin-bottom:6px;text-decoration:underline;text-underline-offset:3px}
+    .t-blue{background:var(--t-blue);color:var(--c-blue)}
+    .t-mint{background:var(--t-mint);color:var(--c-mint)}
+    .t-peach{background:var(--t-peach);color:var(--c-peach)}
+    .t-lilac{background:var(--t-lilac);color:var(--c-lilac)}
+    .t-rose{background:var(--t-rose);color:var(--c-rose)}
+    .muted{color:var(--muted)}
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <header class="banner"><button id="theme" class="floating-toggle" aria-label="Theme">🌙</button></header>
+  <div class="wrap">
+    <header class="banner">
+      <button id="themeToggle" class="chip floating-toggle" aria-label="Theme">🌙</button>
+    </header>
 
-  <section class="card">
-    <h2>Welcome</h2>
-    <div class="grid">
-      <div class="card kpi">
-        <h3>Doctor Dashboard</h3>
-        <p class="small">Patients & follow‑ups, analytics (read‑only)</p>
-        <p><a class="btn" href="dashboard.html">Open</a></p>
+    <nav class="toolbar">
+      <button class="chip" id="btnForceRefresh">Force Refresh Cache</button>
+    </nav>
+
+    <section class="section">
+      <h2 style="margin-bottom:10px;">Welcome</h2>
+      <p class="muted" style="margin-bottom:12px">
+        This demo reads data from <code>./data/*.csv</code>. Use the tiles below to open each feature.
+      </p>
+      <div class="grid">
+        <!-- Doctor -->
+        <a class="tile t-lilac" href="dashboard.html">
+          <h3>Doctor Dashboard</h3>
+          <p>KPIs from CSV · Staff (read-only)</p>
+        </a>
+
+        <!-- Supervisor -->
+        <a class="tile t-mint" href="pharmacy.html">
+          <h3>Pharmacy – Billing</h3>
+          <p>Multi-item invoice (local only in CSV demo)</p>
+        </a>
+
+        <a class="tile t-blue" href="pharmacy-report.html">
+          <h3>Pharmacy – Reports</h3>
+          <p>Totals, range filter, top items</p>
+        </a>
+
+        <a class="tile t-peach" href="bookings.html">
+          <h3>Bookings</h3>
+          <p>Create tokens & manage appointments</p>
+        </a>
+
+        <a class="tile t-rose" href="patients.html">
+          <h3>Patients</h3>
+          <p>Simple register (CSV demo)</p>
+        </a>
+
+        <a class="tile t-lilac" href="admin.html">
+          <h3>Staff – Admin</h3>
+          <p>Create day sheet, mark/edit attendance</p>
+        </a>
+
+        <a class="tile" href="seeder.html" style="background:color-mix(in srgb,#06b6d4 14%,var(--card-bg));color:var(--c-blue)">
+          <h3>Seeder</h3>
+          <p>Seed sample CSV data (view files)</p>
+        </a>
       </div>
-      <div class="card kpi2">
-        <h3>Supervisor Console</h3>
-        <p class="small">Bookings, Billing & Reports, Staff (edit)</p>
-        <p><a class="btn" href="admin.html">Open</a></p>
-      </div>
-    </div>
-  </section>
+    </section>
 
-  <section class="card">
-    <h3>System Check</h3>
-    <p class="muted">Demo runs on CSV files stored locally (no cloud). Use <a href="seeder.html">Seeder</a> to preload sample data.</p>
-    <div class="row">
-      <a class="chip" href="patients.html">Patients</a>
-      <a class="chip" href="bookings.html">Bookings</a>
-      <a class="chip" href="pharmacy.html">Pharmacy</a>
-      <a class="chip" href="pharmacy-report.html">Reports</a>
-      <a class="chip" href="admin-staff.html">Staff</a>
-      <a class="chip" href="analytics.html">Analytics</a>
-      <a class="chip" href="seeder.html">Seeder</a>
-    </div>
-  </section>
+    <section class="section">
+      <h3 style="margin-bottom:6px;">CSV Files used</h3>
+      <ul class="muted" style="margin-left:18px">
+        <li><code>data/invoices.csv</code>, <code>data/invoice_items.csv</code></li>
+        <li><code>data/staff.csv</code>, <code>data/staff_attendance.csv</code></li>
+        <li><code>data/patients.csv</code>, <code>data/bookings.csv</code></li>
+      </ul>
+      <p class="muted">Replace these files to change the demo data.</p>
+    </section>
+  </div>
 
-  <p class="footerNote muted">Tip: toggle theme → top-right 🌙</p>
-</div>
-<script>
-  const t=document.getElementById('theme'); 
-  if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme; t.textContent=localStorage.theme==='light'?'🌞':'🌙';}
-  t.onclick=()=>{const cur=document.documentElement.dataset.theme||'light';const nxt=cur==='light'?'dark':'light';document.documentElement.dataset.theme=nxt;localStorage.theme=nxt;t.textContent=nxt==='light'?'🌞':'🌙';};
-</script>
-</body></html>
+  <script>
+    // Theme toggle
+    const t=document.getElementById('themeToggle');
+    if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme;t.textContent=localStorage.theme==='light'?'🌞':'🌙'}
+    t.onclick=()=>{const cur=document.documentElement.dataset.theme||'light';const nxt=cur==='light'?'dark':'light';document.documentElement.dataset.theme=nxt;localStorage.theme=nxt;t.textContent=nxt==='light'?'🌞':'🌙'}
+
+    // Hard refresh (wipe caches + SW)
+    document.getElementById('btnForceRefresh').onclick = async () => {
+      try{
+        if('serviceWorker' in navigator){
+          const regs = await navigator.serviceWorker.getRegistrations();
+          await Promise.all(regs.map(r=>r.unregister()));
+        }
+        localStorage.clear();
+        if('caches' in window){
+          const keys = await caches.keys();
+          await Promise.all(keys.map(k=>caches.delete(k)));
+        }
+        alert('Cache & service worker cleared. Reloading…');
+        location.reload(true);
+      }catch(e){alert('Clear error: '+e.message)}
+    };
+  </script>
+</body>
+</html>
