--- a/hospitalv2/bookings.html
+++ b/hospitalv2/bookings.html
@@ -1,24 +1,77 @@
+<!doctype html>
+<html lang="en" data-theme="light">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>Bookings — CSV Demo</title>
+  <link rel="icon" href="assets/logo.png"/>
+  <link rel="stylesheet" href="styles.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <style>
+    .wrap{max-width:1120px;margin:0 auto}
+    .toolbar{display:flex;gap:10px;flex-wrap:wrap;margin:10px 12px}
+    .chip{padding:10px 14px;border-radius:999px;background:var(--card-bg);border:1px solid rgba(0,0,0,.06);box-shadow:var(--shadow)}
+    .section{background:var(--card-bg);margin:12px;padding:18px;border-radius:var(--radius);box-shadow:var(--shadow)}
+    table{width:100%;border-collapse:separate;border-spacing:0}
+    th,td{padding:10px;border-bottom:1px solid rgba(0,0,0,.06)}
+    th{text-align:left;font-weight:700}
+    .controls{display:flex;gap:8px;flex-wrap:wrap;margin-bottom:10px}
+    input,select{padding:10px;border-radius:10px;border:1px solid rgba(0,0,0,.12)}
+  </style>
+</head>
+<body>
+<div class="wrap">
+  <header class="banner"><button id="themeToggle" class="chip floating-toggle">🌙</button></header>
+  <nav class="toolbar"><a class="chip" href="index.html">← Home</a></nav>
 
-<!doctype html><html lang="en" data-theme="light">
-<head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Bookings – CSV Demo</title><link rel="stylesheet" href="styles.css"/><script src="js/csv.js"></script></head>
-<body><div class="wrap">
-<header class="banner"><a class="chip floating-toggle" href="admin.html">← Admin</a></header>
-<section class="card"><h2>Bookings</h2>
-  <div class="row"><button class="btn" id="add">Add Booking</button></div>
-  <table id="tbl"></table>
-</section></div>
+  <section class="section">
+    <h2>Bookings</h2>
+    <div class="controls">
+      <input id="q" placeholder="Search name / phone"/>
+      <input id="d" type="date"/>
+      <button class="chip" id="btnReload">Reload</button>
+    </div>
+    <div class="muted">Source: <code>data/bookings.csv</code></div>
+    <table class="mt12">
+      <thead><tr><th>Token</th><th>Name</th><th>Phone</th><th>Date</th><th>Time</th><th>Status</th><th>Source</th></tr></thead>
+      <tbody id="rows"><tr><td colspan="7" class="muted">Loading…</td></tr></tbody>
+    </table>
+  </section>
+</div>
+
 <script>
-function render(){
-  const rows=[['Token','Date','Time','Patient','Status']].concat(
-    CsvDB.all('bookings').map(b=>[b.token_no||'',b.booking_date||'',b.slot_time||'',b.patient_id||'',b.status||'pending'])
-  );
-  document.getElementById('tbl').innerHTML=rows.map((r,i)=>'<tr>'+r.map(c=>`<${i?'td':'th'}>${c}</${i?'td':'th'}>`).join('')+'</tr>').join('');
+const t=document.getElementById('themeToggle');
+if(localStorage.theme){document.documentElement.dataset.theme=localStorage.theme;t.textContent=localStorage.theme==='light'?'🌞':'🌙'}
+t.onclick=()=>{const c=document.documentElement.dataset.theme||'light';const n=c==='light'?'dark':'light';document.documentElement.dataset.theme=n;localStorage.theme=n;t.textContent=n==='light'?'🌞':'🌙'}
+
+async function loadCSV(url){
+  const r=await fetch(url,{cache:'no-cache'}); const txt=await r.text();
+  return new Promise(res=>Papa.parse(txt,{header:true,skipEmptyLines:true,complete:({data})=>res(data)}));
 }
-document.getElementById('add').onclick=()=>{
-  const id='b'+Math.random().toString(36).slice(2,8);
-  CsvDB.insert('bookings',{id,token_no:String((CsvDB.all('bookings').length||0)+1),booking_date:new Date().toISOString().slice(0,10),slot_time:'10:30',patient_id:'p1',status:'pending'});
-  render();
-}; render();
+function renderRows(list){
+  const q=(document.getElementById('q').value||'').toLowerCase();
+  const d=(document.getElementById('d').value||'').slice(0,10);
+  const out=list.filter(r=>{
+    const okQ = !q || (r.name?.toLowerCase().includes(q) || r.phone?.includes(q));
+    const okD = !d || (r.booking_date||r.date||'').slice(0,10)===d;
+    return okQ && okD;
+  }).map(r=>`<tr>
+      <td>${r.token_no||r.token||''}</td>
+      <td>${r.name||''}</td>
+      <td>${r.phone||''}</td>
+      <td>${(r.booking_date||r.date||'').slice(0,10)}</td>
+      <td>${r.slot_time||r.time||''}</td>
+      <td>${r.status||'pending'}</td>
+      <td>${r.source||'manual'}</td>
+    </tr>`).join('');
+  document.getElementById('rows').innerHTML=out||`<tr><td colspan="7" class="muted">No bookings</td></tr>`;
+}
+let ALL=[];
+async function reload(){ ALL=await loadCSV('data/bookings.csv'); renderRows(ALL); }
+document.getElementById('q').oninput=()=>renderRows(ALL);
+document.getElementById('d').onchange=()=>renderRows(ALL);
+document.getElementById('btnReload').onclick=reload;
+reload();
 </script>
-</body></html>
+</body>
+</html>
